# mpp_rtsp_player

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  mppdecoder.c  mppdecoder.h  rtspprotocolutil.c  rtspprotocolutil.h  tools.h  yuvdisplay.c  yuvdisplay.h
rkdrm/: bo.c  bo.h  dev.c  dev.h  modeset.c  modeset.h  rkdrm.c  rkdrm.h
rkdrm/drm/: drm.h  rockchip_drm.h  rockchip_drmif.h  rockchip_rga.h
